# Calculator

./: README.md
src/: CMakeLists.txt  Makefile  main.cc  manual.tex
src/common/: date.h  structs.h
src/controller/: calccontroller.cc  calccontroller.h
src/model/: calccore.h  creditcalc.cc  creditcalc.h  depositcalc.cc  depositcalc.h  mathcalc.cc  mathcalc.h
src/tests/: tests_main.cc
src/view/: mainwindow.cc  mainwindow.h
src/view/forms/: mainwindow.ui
